@@ -6,13 +6,16 @@ package org.chromium.chrome.browser.data_sharing.ui.shared_image_tiles;
 
 import static org.junit.Assert.assertEquals;
 import static org.junit.Assert.assertNotNull;
-import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.ArgumentMatchers.anyBoolean;
 import static org.mockito.ArgumentMatchers.eq;
-import static org.mockito.Mockito.doAnswer;
 import static org.mockito.Mockito.doReturn;
+import static org.mockito.Mockito.mock;
+import static org.mockito.Mockito.never;
+import static org.mockito.Mockito.times;
 import static org.mockito.Mockito.verify;
 
 import android.app.Activity;
+import android.graphics.Bitmap;
 import android.view.View;
 import android.widget.TextView;
 
@@ -20,6 +23,7 @@ import org.junit.Before;
 import org.junit.Rule;
 import org.junit.Test;
 import org.junit.runner.RunWith;
+import org.mockito.ArgumentCaptor;
 import org.mockito.Mock;
 import org.mockito.junit.MockitoJUnit;
 import org.mockito.junit.MockitoRule;
@@ -27,15 +31,15 @@ import org.robolectric.Robolectric;
 
 import org.chromium.base.Callback;
 import org.chromium.base.test.BaseRobolectricTestRunner;
+import org.chromium.components.collaboration.CollaborationService;
 import org.chromium.components.data_sharing.DataSharingService;
-import org.chromium.components.data_sharing.DataSharingService.GroupDataOrFailureOutcome;
 import org.chromium.components.data_sharing.DataSharingUIDelegate;
 import org.chromium.components.data_sharing.GroupData;
 import org.chromium.components.data_sharing.GroupMember;
-import org.chromium.components.data_sharing.PeopleGroupActionFailure;
+import org.chromium.components.data_sharing.configs.DataSharingAvatarBitmapConfig;
 import org.chromium.ui.base.TestActivity;
 
-import java.util.Arrays;
+import java.util.List;
 
 /** Unit test for {@link SharedImageTilesCoordinator} */
 @RunWith(BaseRobolectricTestRunner.class)
@@ -46,7 +50,9 @@ public class SharedImageTilesCoordinatorUnitTest {
     private static final String EMAIL = "test@test.com";
 
     @Mock private DataSharingService mDataSharingService;
+    @Mock private CollaborationService mCollaborationService;
     @Mock private DataSharingUIDelegate mDataSharingUiDelegate;
+    @Mock private Bitmap mAvatarBitmap;
 
     private Activity mActivity;
     private SharedImageTilesCoordinator mSharedImageTilesCoordinator;
@@ -56,19 +62,67 @@ public class SharedImageTilesCoordinatorUnitTest {
     @Before
     public void setUp() {
         mActivity = Robolectric.buildActivity(TestActivity.class).setup().get();
-        initialize(SharedImageTilesType.DEFAULT, SharedImageTilesColor.DEFAULT);
+        SharedImageTilesConfig config = new SharedImageTilesConfig.Builder(mActivity).build();
+        initialize(config);
     }
 
-    private void initialize(@SharedImageTilesType int type, @SharedImageTilesColor int color) {
+    private void initialize(SharedImageTilesConfig config) {
         mSharedImageTilesCoordinator =
-                new SharedImageTilesCoordinator(mActivity, type, color, mDataSharingService);
+                new SharedImageTilesCoordinator(
+                        mActivity, config, mDataSharingService, mCollaborationService);
         mView = mSharedImageTilesCoordinator.getView();
         mCountTileView = mView.findViewById(R.id.tiles_count);
+        doReturn(mDataSharingUiDelegate).when(mDataSharingService).getUiDelegate();
     }
 
     private void verifyViews(int countVisibility, int iconViewCount) {
         assertEquals(mCountTileView.getVisibility(), countVisibility);
         assertEquals(mSharedImageTilesCoordinator.getAllIconViews().size(), iconViewCount);
+    }
+
+    private void simulateReadGroupWith2ValidMembers() {
+        GroupMember memberValid1 =
+                new GroupMember(
+                        /* gaiaId= */ null,
+                        /* displayName= */ null,
+                        EMAIL,
+                        /* role= */ 0,
+                        /* avatarUrl= */ null,
+                        /* givenName= */ null);
+        GroupMember memberValid2 =
+                new GroupMember(
+                        /* gaiaId= */ null,
+                        /* displayName= */ null,
+                        EMAIL,
+                        /* role= */ 0,
+                        /* avatarUrl= */ null,
+                        /* givenName= */ null);
+        GroupMember memberInvalid1 =
+                new GroupMember(
+                        /* gaiaId= */ null,
+                        /* displayName= */ null,
+                        /* email= */ null,
+                        /* role= */ 0,
+                        /* avatarUrl= */ null,
+                        /* givenName= */ null);
+        GroupMember memberInvalid2 =
+                new GroupMember(
+                        /* gaiaId= */ null,
+                        /* displayName= */ null,
+                        /* email= */ "",
+                        /* role= */ 0,
+                        /* avatarUrl= */ null,
+                        /* givenName= */ null);
+        GroupData groupData =
+                new GroupData(
+                        /* groupId= */ null,
+                        /* displayName= */ null,
+                        new GroupMember[] {
+                            memberValid1, memberValid2, memberInvalid1, memberInvalid2
+                        },
+                        /* accessToken= */ null);
+
+        doReturn(groupData).when(mCollaborationService).getGroupData(eq(COLLABORATION_ID));
     }
 
     @Test
@@ -102,7 +156,56 @@ public class SharedImageTilesCoordinatorUnitTest {
 
     @Test
     public void testFetchPeopleIcon() {
-        GroupMember memberValid =
+        simulateReadGroupWith2ValidMembers();
+        Callback<Boolean> mockFinishedCallback = mock(Callback.class);
+        mSharedImageTilesCoordinator.fetchImagesForCollaborationId(
+                COLLABORATION_ID, mockFinishedCallback);
+
+        ArgumentCaptor<DataSharingAvatarBitmapConfig> configCaptor =
+                ArgumentCaptor.forClass(DataSharingAvatarBitmapConfig.class);
+
+        verify(mDataSharingUiDelegate, times(2)).getAvatarBitmap(configCaptor.capture());
+
+        // Finished callback is not triggered if we are waiting for more bitmaps.
+        configCaptor
+                .getAllValues()
+                .get(0)
+                .getDataSharingAvatarCallback()
+                .onAvatarLoaded(mAvatarBitmap);
+
+        verify(mockFinishedCallback, never()).onResult(anyBoolean());
+
+        // Finished callback should only be called when all bitmaps returns.
+        configCaptor
+                .getAllValues()
+                .get(1)
+                .getDataSharingAvatarCallback()
+                .onAvatarLoaded(mAvatarBitmap);
+
+        verify(mockFinishedCallback).onResult(true);
+    }
+
+    @Test
+    public void testFetchPeopleIconFailure() {
+        simulateReadGroupWith2ValidMembers();
+
+        Callback<Boolean> mockFinishedCallback = mock(Callback.class);
+        mSharedImageTilesCoordinator.fetchImagesForCollaborationId(
+                COLLABORATION_ID, mockFinishedCallback);
+
+        verify(mockFinishedCallback, never()).onResult(anyBoolean());
+
+        // A new update would fail the previous ongoing update.
+        Callback<Boolean> mockFinishedCallback2 = mock(Callback.class);
+        mSharedImageTilesCoordinator.fetchImagesForCollaborationId(
+                COLLABORATION_ID, mockFinishedCallback2);
+
+        verify(mockFinishedCallback).onResult(false);
+    }
+
+    @Test
+    public void testUpdateGroupMembers() {
+        GroupMember memberValid1 =
                 new GroupMember(
                         /* gaiaId= */ null,
                         /* displayName= */ null,
@@ -110,45 +213,38 @@ public class SharedImageTilesCoordinatorUnitTest {
                         /* role= */ 0,
                         /* avatarUrl= */ null,
                         /* givenName= */ null);
-        GroupMember memberInvalid1 =
+        GroupMember memberValid2 =
                 new GroupMember(
                         /* gaiaId= */ null,
                         /* displayName= */ null,
-                        /* email= */ null,
+                        EMAIL,
                         /* role= */ 0,
                         /* avatarUrl= */ null,
                         /* givenName= */ null);
-        GroupMember memberInvalid2 =
-                new GroupMember(
-                        /* gaiaId= */ null,
-                        /* displayName= */ null,
-                        /* email= */ "",
-                        /* role= */ 0,
-                        /* avatarUrl= */ null,
-                        /* givenName= */ null);
-        GroupDataOrFailureOutcome outcome =
-                new GroupDataOrFailureOutcome(
-                        new GroupData(
-                                /* groupId= */ null,
-                                /* displayName= */ null,
-                                new GroupMember[] {memberValid, memberInvalid1, memberInvalid2},
-                                /* accessToken= */ null),
-                        PeopleGroupActionFailure.UNKNOWN);
+        ArgumentCaptor<DataSharingAvatarBitmapConfig> configCaptor =
+                ArgumentCaptor.forClass(DataSharingAvatarBitmapConfig.class);
 
-        doAnswer(
-                        invocation -> {
-                            Callback<GroupDataOrFailureOutcome> callback =
-                                    invocation.getArgument(1);
-                            callback.onResult(outcome);
-                            return null;
-                        })
-                .when(mDataSharingService)
-                .readGroup(eq(COLLABORATION_ID), any(Callback.class));
-        doReturn(mDataSharingUiDelegate).when(mDataSharingService).getUIDelegate();
+        // Two members.
+        mSharedImageTilesCoordinator.onGroupMembersChanged(
+                COLLABORATION_ID, List.of(memberValid1, memberValid2));
+        verify(mDataSharingUiDelegate, times(2)).getAvatarBitmap(configCaptor.capture());
+        verifyViews(View.GONE, /* iconViewCount= */ 2);
 
-        mSharedImageTilesCoordinator.updateCollaborationId(COLLABORATION_ID);
+        // No members.
+        mSharedImageTilesCoordinator.onGroupMembersChanged(COLLABORATION_ID, /* members= */ null);
+        verify(mDataSharingUiDelegate, times(2)).getAvatarBitmap(configCaptor.capture());
+        verifyViews(View.GONE, /* iconViewCount= */ 0);
 
-        verify(mDataSharingUiDelegate)
-                .showAvatars(any(), any(), eq(Arrays.asList(memberValid.email)), any(), any());
+        // Two members.
+        mSharedImageTilesCoordinator.onGroupMembersChanged(
+                COLLABORATION_ID, List.of(memberValid1, memberValid2));
+        verify(mDataSharingUiDelegate, times(4)).getAvatarBitmap(configCaptor.capture());
+        verifyViews(View.GONE, /* iconViewCount= */ 2);
+
+        // No group.
+        mSharedImageTilesCoordinator.onGroupMembersChanged(
+                /* collaborationId= */ null, /* members= */ null);
+        verify(mDataSharingUiDelegate, times(4)).getAvatarBitmap(configCaptor.capture());
+        verifyViews(View.GONE, /* iconViewCount= */ 0);
     }
 }
